CRUD abstract classes update
I mean see changelog